User Registration & Small Fixes
User Registration and Login Added. Small Fixes on Server.